@startuml

title UC01 - Registar Organização - Excerto do Modelo de Domínio

left to right direction

class Plataforma <<Singleton>> {
    -String designacao
}

class Organização {
    -String nome
    -String NIF
    -Website website
    -String telefone
    -Email Email
}

class Colaborador {
    -String funcao
    -String telefone
}

class EnderecoPostal {
    -String arruamento
    -String numeroPorta
    -String localidade
    -String codigoPostal
}

class Utilizador {
    -String nome
    -Email email
    -Password password
}

class AlgoritmoExternoGeracaoPwd {
}

Plataforma "1"--"*" Organização : tem registadas >
Plataforma "1"--"1" AlgoritmoExternoGeracaoPwd : recorre a >
AlgoritmoExternoGeracaoPwd "1"--"*" Utilizador : gera password >
Organização "1"--"1..*" Colaborador : tem >
Organização "1"--"1" Colaborador : tem gestor >
Organização "0..1"--"1" EnderecoPostal : localizada em >
Colaborador "0..1"--"1" Utilizador : atua como <

@enduml